--- a/OLE_jupyternotebook/check_gradient.ipynb
+++ b/OLE_jupyternotebook/check_gradient.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "3d4115e5",
    "metadata": {},
    "outputs": [
@@ -20,14 +20,14 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.1484,  0.1180],\n",
-      "        [-0.1484, -0.1180]])\n",
-      "tensor([-0.0539,  0.0539])\n",
+      "tensor([[ 0.0875, -0.0827],\n",
+      "        [-0.0875,  0.0827]])\n",
+      "tensor([-0.0588,  0.0588])\n",
       "\n",
       "KL Divergence Loss Gradient:\n",
-      "tensor([[ 0.1484,  0.1180],\n",
-      "        [-0.1484, -0.1180]])\n",
-      "tensor([-0.0539,  0.0539])\n"
+      "tensor([[ 0.0875, -0.0827],\n",
+      "        [-0.0875,  0.0827]])\n",
+      "tensor([-0.0588,  0.0588])\n"
      ]
     }
    ],
@@ -82,17 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "6dd2a023",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.7474, grad_fn=<NllLossBackward>)"
+       "tensor(0.7403, grad_fn=<NllLossBackward>)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "3bb44854",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.7474, grad_fn=<NllLossBackward>)"
+       "tensor(0.7403, grad_fn=<NllLossBackward>)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,17 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "5698603e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(2.2421, grad_fn=<AddBackward0>)"
+       "tensor(2.2209, grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,19 +146,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "b0e53d7c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.4451,  0.3539],\n",
-       "         [-0.4451, -0.3539]]),\n",
-       " tensor([-0.1616,  0.1616]))"
+       "(tensor([[ 0.2626, -0.2482],\n",
+       "         [-0.2626,  0.2482]]),\n",
+       " tensor([-0.1763,  0.1763]))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "77c1fe23",
    "metadata": {},
    "outputs": [
@@ -186,9 +186,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.1484,  0.1180],\n",
-      "        [-0.1484, -0.1180]])\n",
-      "tensor([-0.0539,  0.0539])\n"
+      "tensor([[ 0.0875, -0.0827],\n",
+      "        [-0.0875,  0.0827]])\n",
+      "tensor([-0.0588,  0.0588])\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "3bdede2c",
    "metadata": {},
    "outputs": [
@@ -217,15 +217,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.1484,  0.1180],\n",
-      "        [-0.1484, -0.1180]])\n",
-      "tensor([-0.0539,  0.0539])\n",
-      "tensor([[ 0.1484,  0.1180],\n",
-      "        [-0.1484, -0.1180]])\n",
-      "tensor([-0.0539,  0.0539])\n",
-      "tensor([[ 0.1484,  0.1180],\n",
-      "        [-0.1484, -0.1180]])\n",
-      "tensor([-0.0539,  0.0539])\n"
+      "tensor([[ 0.0875, -0.0827],\n",
+      "        [-0.0875,  0.0827]])\n",
+      "tensor([-0.0588,  0.0588])\n",
+      "tensor([[ 0.0875, -0.0827],\n",
+      "        [-0.0875,  0.0827]])\n",
+      "tensor([-0.0588,  0.0588])\n",
+      "tensor([[ 0.0875, -0.0827],\n",
+      "        [-0.0875,  0.0827]])\n",
+      "tensor([-0.0588,  0.0588])\n"
      ]
     }
    ],
@@ -245,28 +245,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "31ef3c09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.1484,  0.1180],\n",
-       "         [-0.1484, -0.1180]]),\n",
-       " tensor([-0.0539,  0.0539]),\n",
-       " tensor([[ 0.1484,  0.1180],\n",
-       "         [-0.1484, -0.1180]]),\n",
-       " tensor([-0.0539,  0.0539]),\n",
-       " tensor([[ 0.1484,  0.1180],\n",
-       "         [-0.1484, -0.1180]]),\n",
-       " tensor([-0.0539,  0.0539]),\n",
-       " tensor([[ 0.1484,  0.1180],\n",
-       "         [-0.1484, -0.1180]]),\n",
-       " tensor([-0.0539,  0.0539]))"
+       "(tensor([[ 0.0875, -0.0827],\n",
+       "         [-0.0875,  0.0827]]),\n",
+       " tensor([-0.0588,  0.0588]),\n",
+       " tensor([[ 0.0875, -0.0827],\n",
+       "         [-0.0875,  0.0827]]),\n",
+       " tensor([-0.0588,  0.0588]),\n",
+       " tensor([[ 0.0875, -0.0827],\n",
+       "         [-0.0875,  0.0827]]),\n",
+       " tensor([-0.0588,  0.0588]),\n",
+       " tensor([[ 0.0875, -0.0827],\n",
+       "         [-0.0875,  0.0827]]),\n",
+       " tensor([-0.0588,  0.0588]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "a85ef497",
    "metadata": {},
    "outputs": [
@@ -294,9 +294,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.4451,  0.3539],\n",
-      "        [-0.4451, -0.3539]])\n",
-      "tensor([-0.1616,  0.1616])\n"
+      "tensor([[ 0.2626, -0.2482],\n",
+      "        [-0.2626,  0.2482]])\n",
+      "tensor([-0.1763,  0.1763])\n"
      ]
     }
    ],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "5dab046a",
    "metadata": {},
    "outputs": [
@@ -325,9 +325,9 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.4451,  0.3539],\n",
-      "        [-0.4451, -0.3539]])\n",
-      "tensor([-0.1616,  0.1616])\n"
+      "tensor([[ 0.2626, -0.2482],\n",
+      "        [-0.2626,  0.2482]])\n",
+      "tensor([-0.1763,  0.1763])\n"
      ]
     }
    ],
@@ -341,24 +341,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "id": "42595cdd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.1484,  0.1180],\n",
-       "        [-0.1484, -0.1180]])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(tensor([[ 0.0875, -0.0827],\n",
+      "        [-0.0875,  0.0827]]), tensor([-0.0588,  0.0588]))\n",
+      "++++++++++\n",
+      "tensor([[ 0.2626, -0.2482],\n",
+      "        [-0.2626,  0.2482]])\n",
+      "tensor([-0.1763,  0.1763])\n"
+     ]
     }
    ],
    "source": [
-    "ce_gradient[0]"
+    "names_grads_copy = {}\n",
+    "\n",
+    "print(ce_gradient)\n",
+    "\n",
+    "print(\"+\"*10)\n",
+    "\n",
+    "for param_name, ce_grad, kl_grad in zip(model.parameters(), ce_gradient, kl_gradient):\n",
+    "    names_grads_copy[param_name] = torch.tensor(2) * ce_grad + kl_grad\n",
+    "    \n",
+    "for key, value in names_grads_copy.items():\n",
+    "    print(value)"
    ]
   }
  ],
