--- a/Test_jupyternotebook/check_gradient.ipynb
+++ b/Test_jupyternotebook/check_gradient.ipynb
@@ -20,12 +20,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.0557, -0.0430],\n",
-      "        [-0.1193,  0.0920]])\n",
-      "tensor([-0.0010,  0.0022])\n",
-      "tensor([[-0.0689,  0.1304],\n",
-      "        [ 0.0689, -0.1304]])\n",
-      "tensor([ 0.0022, -0.0022])\n"
+      "tensor([[ 0.0007, -0.0012],\n",
+      "        [ 0.0008, -0.0013]])\n",
+      "tensor([0.0112, 0.0119])\n",
+      "tensor([[-0.0501, -0.0477],\n",
+      "        [ 0.0501,  0.0477]])\n",
+      "tensor([-0.0873,  0.0873])\n"
      ]
     }
    ],
@@ -93,12 +93,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.1115, -0.0859],\n",
-      "        [-0.2387,  0.1840]])\n",
-      "tensor([-0.0020,  0.0043])\n",
-      "tensor([[-0.1377,  0.2607],\n",
-      "        [ 0.1377, -0.2607]])\n",
-      "tensor([ 0.0044, -0.0044])\n"
+      "tensor([[ 0.0014, -0.0025],\n",
+      "        [ 0.0015, -0.0026]])\n",
+      "tensor([0.0224, 0.0238])\n",
+      "tensor([[-0.1002, -0.0954],\n",
+      "        [ 0.1002,  0.0954]])\n",
+      "tensor([-0.1747,  0.1747])\n"
      ]
     }
    ],
@@ -143,9 +143,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(tensor([[-0.2446,  0.1243],\n",
-      "        [ 0.5039, -0.1083]]), tensor([-0.8359,  1.1386]), tensor([[ 0.2636, -0.2024],\n",
-      "        [-1.3605,  0.4303]]), tensor([ 0.2386, -1.7379]))\n"
+      "(tensor([[-0.1276, -0.5890],\n",
+      "        [ 0.1089,  0.0384]]), tensor([-0.1783, -0.1328]), tensor([[ 0.8781,  0.5249],\n",
+      "        [-1.3218, -0.2025]]), tensor([ 1.0254, -1.0958]))\n"
      ]
     }
    ],
@@ -166,12 +166,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.2446,  0.1243],\n",
-      "        [ 0.5039, -0.1083]])\n",
-      "tensor([-0.8359,  1.1386])\n",
-      "tensor([[ 0.2636, -0.2024],\n",
-      "        [-1.3605,  0.4303]])\n",
-      "tensor([ 0.2386, -1.7379])\n"
+      "tensor([[-0.1276, -0.5890],\n",
+      "        [ 0.1089,  0.0384]])\n",
+      "tensor([-0.1783, -0.1328])\n",
+      "tensor([[ 0.8781,  0.5249],\n",
+      "        [-1.3218, -0.2025]])\n",
+      "tensor([ 1.0254, -1.0958])\n"
      ]
     }
    ],
@@ -209,12 +209,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.1115, -0.0859],\n",
-      "        [-0.2387,  0.1840]])\n",
-      "tensor([-0.0020,  0.0043])\n",
-      "tensor([[-0.1377,  0.2607],\n",
-      "        [ 0.1377, -0.2607]])\n",
-      "tensor([ 0.0044, -0.0044])\n"
+      "tensor([[ 0.0014, -0.0025],\n",
+      "        [ 0.0015, -0.0026]])\n",
+      "tensor([0.0224, 0.0238])\n",
+      "tensor([[-0.1002, -0.0954],\n",
+      "        [ 0.1002,  0.0954]])\n",
+      "tensor([-0.1747,  0.1747])\n"
      ]
     }
    ],
@@ -243,24 +243,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.1115, -0.0859],\n",
-      "        [-0.2387,  0.1840]])\n",
-      "tensor([-0.0020,  0.0043])\n",
-      "tensor([[-0.1377,  0.2607],\n",
-      "        [ 0.1377, -0.2607]])\n",
-      "tensor([ 0.0044, -0.0044])\n",
-      "tensor([[ 0.1115, -0.0859],\n",
-      "        [-0.2387,  0.1840]])\n",
-      "tensor([-0.0020,  0.0043])\n",
-      "tensor([[-0.1377,  0.2607],\n",
-      "        [ 0.1377, -0.2607]])\n",
-      "tensor([ 0.0044, -0.0044])\n",
-      "tensor([[ 0.1115, -0.0859],\n",
-      "        [-0.2387,  0.1840]])\n",
-      "tensor([-0.0020,  0.0043])\n",
-      "tensor([[-0.1377,  0.2607],\n",
-      "        [ 0.1377, -0.2607]])\n",
-      "tensor([ 0.0044, -0.0044])\n"
+      "tensor([[ 0.0014, -0.0025],\n",
+      "        [ 0.0015, -0.0026]])\n",
+      "tensor([0.0224, 0.0238])\n",
+      "tensor([[-0.1002, -0.0954],\n",
+      "        [ 0.1002,  0.0954]])\n",
+      "tensor([-0.1747,  0.1747])\n",
+      "tensor([[ 0.0014, -0.0025],\n",
+      "        [ 0.0015, -0.0026]])\n",
+      "tensor([0.0224, 0.0238])\n",
+      "tensor([[-0.1002, -0.0954],\n",
+      "        [ 0.1002,  0.0954]])\n",
+      "tensor([-0.1747,  0.1747])\n",
+      "tensor([[ 0.0014, -0.0025],\n",
+      "        [ 0.0015, -0.0026]])\n",
+      "tensor([0.0224, 0.0238])\n",
+      "tensor([[-0.1002, -0.0954],\n",
+      "        [ 0.1002,  0.0954]])\n",
+      "tensor([-0.1747,  0.1747])\n"
      ]
     }
    ],
@@ -287,30 +287,30 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.1115, -0.0859],\n",
-       "         [-0.2387,  0.1840]]),\n",
-       " tensor([-0.0020,  0.0043]),\n",
-       " tensor([[-0.1377,  0.2607],\n",
-       "         [ 0.1377, -0.2607]]),\n",
-       " tensor([ 0.0044, -0.0044]),\n",
-       " tensor([[ 0.1115, -0.0859],\n",
-       "         [-0.2387,  0.1840]]),\n",
-       " tensor([-0.0020,  0.0043]),\n",
-       " tensor([[-0.1377,  0.2607],\n",
-       "         [ 0.1377, -0.2607]]),\n",
-       " tensor([ 0.0044, -0.0044]),\n",
-       " tensor([[ 0.1115, -0.0859],\n",
-       "         [-0.2387,  0.1840]]),\n",
-       " tensor([-0.0020,  0.0043]),\n",
-       " tensor([[-0.1377,  0.2607],\n",
-       "         [ 0.1377, -0.2607]]),\n",
-       " tensor([ 0.0044, -0.0044]),\n",
-       " tensor([[-0.1780,  0.1051],\n",
-       "         [ 0.3713, -0.1461]]),\n",
-       " tensor([-0.4169,  0.5672]),\n",
-       " tensor([[ 0.2006, -0.2316],\n",
-       "         [-0.7491,  0.3455]]),\n",
-       " tensor([ 0.1171, -0.8668]))"
+       "(tensor([[ 0.0014, -0.0025],\n",
+       "         [ 0.0015, -0.0026]]),\n",
+       " tensor([0.0224, 0.0238]),\n",
+       " tensor([[-0.1002, -0.0954],\n",
+       "         [ 0.1002,  0.0954]]),\n",
+       " tensor([-0.1747,  0.1747]),\n",
+       " tensor([[ 0.0014, -0.0025],\n",
+       "         [ 0.0015, -0.0026]]),\n",
+       " tensor([0.0224, 0.0238]),\n",
+       " tensor([[-0.1002, -0.0954],\n",
+       "         [ 0.1002,  0.0954]]),\n",
+       " tensor([-0.1747,  0.1747]),\n",
+       " tensor([[ 0.0014, -0.0025],\n",
+       "         [ 0.0015, -0.0026]]),\n",
+       " tensor([0.0224, 0.0238]),\n",
+       " tensor([[-0.1002, -0.0954],\n",
+       "         [ 0.1002,  0.0954]]),\n",
+       " tensor([-0.1747,  0.1747]),\n",
+       " tensor([[-0.0645, -0.2933],\n",
+       "         [ 0.0537,  0.0205]]),\n",
+       " tensor([-0.1004, -0.0783]),\n",
+       " tensor([[ 0.4891,  0.3101],\n",
+       "         [-0.7110, -0.1489]]),\n",
+       " tensor([ 0.6000, -0.6353]))"
       ]
      },
      "execution_count": 8,
@@ -341,12 +341,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.3345, -0.2578],\n",
-      "        [-0.7161,  0.5520]])\n",
-      "tensor([-0.0061,  0.0130])\n",
-      "tensor([[-0.4132,  0.7822],\n",
-      "        [ 0.4132, -0.7822]])\n",
-      "tensor([ 0.0132, -0.0132])\n"
+      "tensor([[ 0.0043, -0.0074],\n",
+      "        [ 0.0045, -0.0078]])\n",
+      "tensor([0.0673, 0.0714])\n",
+      "tensor([[-0.3005, -0.2861],\n",
+      "        [ 0.3005,  0.2861]])\n",
+      "tensor([-0.5240,  0.5240])\n"
      ]
     }
    ],
@@ -375,12 +375,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.3345, -0.2578],\n",
-      "        [-0.7161,  0.5520]])\n",
-      "tensor([-0.0061,  0.0130])\n",
-      "tensor([[-0.4132,  0.7822],\n",
-      "        [ 0.4132, -0.7822]])\n",
-      "tensor([ 0.0132, -0.0132])\n"
+      "tensor([[ 0.0043, -0.0074],\n",
+      "        [ 0.0045, -0.0078]])\n",
+      "tensor([0.0673, 0.0714])\n",
+      "tensor([[-0.3005, -0.2861],\n",
+      "        [ 0.3005,  0.2861]])\n",
+      "tensor([-0.5240,  0.5240])\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "fbc6b756",
    "metadata": {},
    "outputs": [
@@ -410,12 +410,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.1115, -0.0859],\n",
-      "        [-0.2387,  0.1840]])\n",
-      "tensor([-0.0020,  0.0043])\n",
-      "tensor([[-0.1377,  0.2607],\n",
-      "        [ 0.1377, -0.2607]])\n",
-      "tensor([ 0.0044, -0.0044])\n"
+      "tensor([[ 0.0014, -0.0025],\n",
+      "        [ 0.0015, -0.0026]])\n",
+      "tensor([0.0224, 0.0238])\n",
+      "tensor([[-0.1002, -0.0954],\n",
+      "        [ 0.1002,  0.0954]])\n",
+      "tensor([-0.1747,  0.1747])\n"
      ]
     }
    ],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "bea29473",
    "metadata": {},
    "outputs": [
@@ -442,8 +442,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_29376\\3482318061.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mce_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrequires_grad\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mce_gradient\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mce_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mce_gradient\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\maml\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mgrad\u001b[1;34m(outputs, inputs, grad_outputs, retain_graph, create_graph, only_inputs, allow_unused, is_grads_batched)\u001b[0m\n\u001b[0;32m    300\u001b[0m         return Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0;32m    301\u001b[0m             \u001b[0mt_outputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_outputs_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mt_inputs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 302\u001b[1;33m             allow_unused, accumulate_grad=False)  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[0;32m    303\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    304\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_13576\\3482318061.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mce_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrequires_grad\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mce_gradient\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mce_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mce_gradient\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\metal\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mgrad\u001b[1;34m(outputs, inputs, grad_outputs, retain_graph, create_graph, only_inputs, allow_unused)\u001b[0m\n\u001b[0;32m    226\u001b[0m     return Variable._execution_engine.run_backward(\n\u001b[0;32m    227\u001b[0m         \u001b[0moutputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_outputs_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 228\u001b[1;33m         inputs, allow_unused, accumulate_grad=False)\n\u001b[0m\u001b[0;32m    229\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    230\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mRuntimeError\u001b[0m: One of the differentiated Tensors appears to not have been used in the graph. Set allow_unused=True if this is the desired behavior."
      ]
     }
@@ -475,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
