--- a/Test_jupyternotebook/loss_landscape_maml.ipynb
+++ b/Test_jupyternotebook/loss_landscape_maml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "a5f86c68",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "36ee9e0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "253a5b51",
    "metadata": {},
    "outputs": [],
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "199f9b6e",
    "metadata": {},
    "outputs": [
@@ -166,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "id": "f85286c6",
    "metadata": {},
    "outputs": [
@@ -256,7 +265,33 @@
       "train_seed 959531, val_seed: 959531, at start time\n",
       "50000 50000\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# 모델을 구성한다\n",
+    "model = MAMLFewShotClassifier(args=args, device=device,\n",
+    "                              im_shape=(2, 3,\n",
+    "                                        args.image_height, args.image_width))\n",
+    "\n",
+    "data = MetaLearningSystemDataLoader\n",
+    "\n",
+    "maml_system = ExperimentBuilder(model=model, data=data, args=args, device=device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e179503e",
+   "metadata": {},
+   "source": [
+    "## 0. 모델 상태 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "fed56fef",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
@@ -4128,22 +4163,88 @@
        "   0.0]}}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 모델을 구성한다\n",
-    "model = MAMLFewShotClassifier(args=args, device=device,\n",
-    "                              im_shape=(2, 3,\n",
-    "                                        args.image_height, args.image_width))\n",
-    "\n",
-    "data = MetaLearningSystemDataLoader\n",
-    "\n",
-    "maml_system = ExperimentBuilder(model=model, data=data, args=args, device=device)\n",
-    "\n",
     "maml_system.state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "576fb176",
+   "metadata": {},
+   "source": [
+    "# 1. 학습된 모델을 불러온다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b1954527",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MAMLFewShotClassifier(\n",
+       "  (classifier): VGGReLUNormNetwork(\n",
+       "    (layer_dict): ModuleDict(\n",
+       "      (conv0): MetaConvNormLayerReLU(\n",
+       "        (layer_dict): ModuleDict()\n",
+       "        (conv): MetaConv2dLayer()\n",
+       "        (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "      (conv1): MetaConvNormLayerReLU(\n",
+       "        (layer_dict): ModuleDict()\n",
+       "        (conv): MetaConv2dLayer()\n",
+       "        (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "      (conv2): MetaConvNormLayerReLU(\n",
+       "        (layer_dict): ModuleDict()\n",
+       "        (conv): MetaConv2dLayer()\n",
+       "        (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "      (conv3): MetaConvNormLayerReLU(\n",
+       "        (layer_dict): ModuleDict()\n",
+       "        (conv): MetaConv2dLayer()\n",
+       "        (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "      (linear): MetaLinearLayer()\n",
+       "    )\n",
+       "  )\n",
+       "  (inner_loop_optimizer): LSLRGradientDescentLearningRule(\n",
+       "    (names_learning_rates_dict): ParameterDict(\n",
+       "        (layer_dict-conv0-conv-weight): Parameter containing: [torch.cuda.FloatTensor of size 6 (GPU 0)]\n",
+       "        (layer_dict-conv0-conv-bias): Parameter containing: [torch.cuda.FloatTensor of size 6 (GPU 0)]\n",
+       "        (layer_dict-conv1-conv-weight): Parameter containing: [torch.cuda.FloatTensor of size 6 (GPU 0)]\n",
+       "        (layer_dict-conv1-conv-bias): Parameter containing: [torch.cuda.FloatTensor of size 6 (GPU 0)]\n",
+       "        (layer_dict-conv2-conv-weight): Parameter containing: [torch.cuda.FloatTensor of size 6 (GPU 0)]\n",
+       "        (layer_dict-conv2-conv-bias): Parameter containing: [torch.cuda.FloatTensor of size 6 (GPU 0)]\n",
+       "        (layer_dict-conv3-conv-weight): Parameter containing: [torch.cuda.FloatTensor of size 6 (GPU 0)]\n",
+       "        (layer_dict-conv3-conv-bias): Parameter containing: [torch.cuda.FloatTensor of size 6 (GPU 0)]\n",
+       "        (layer_dict-linear-weights): Parameter containing: [torch.cuda.FloatTensor of size 6 (GPU 0)]\n",
+       "        (layer_dict-linear-bias): Parameter containing: [torch.cuda.FloatTensor of size 6 (GPU 0)]\n",
+       "    )\n",
+       "  )\n",
+       "  (arbiter): Sequential(\n",
+       "    (0): Linear(in_features=20, out_features=20, bias=True)\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): Linear(in_features=20, out_features=10, bias=True)\n",
+       "    (3): Softplus(beta=1, threshold=20)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maml_system.model"
    ]
   },
   {
@@ -4151,12 +4252,12 @@
    "id": "1484a472",
    "metadata": {},
    "source": [
-    "# 1. Data를 불러온다"
+    "# 2. Data를 불러온다"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "170a7604",
    "metadata": {},
    "outputs": [],
@@ -4167,22 +4268,6 @@
     "    x_support_set, x_target_set, y_support_set, y_target_set, seed = test_sample\n",
     "    data_batch = (x_support_set, x_target_set, y_support_set, y_target_set)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "576fb176",
-   "metadata": {},
-   "source": [
-    "# 2. 학습된 모델을 불러온다"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1954527",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
